[Fix] The styles on the 'IntroSection' and 'AboutPage' now make the image adjust properly (before it breakes the display on responsive) and in the 'AboutPage' I romoved a 'border' so it doesn't make an overflow-x

--- a/src/styles/AboutPage.scss
+++ b/src/styles/AboutPage.scss
@@ -22,6 +22,6 @@
     width: 100vw;
     height: 1000px;
     
-    border: 1px black solid;
+    // border: 1px black solid;
     background-color: whitesmoke;
 }
