--- a/src/styles/IntroSection.scss
+++ b/src/styles/IntroSection.scss
@@ -11,8 +11,9 @@
 }
 .IntroImagen {
     filter: brightness(40%);
-    height: 100%;
 }
 .IntroImagen img {
     object-fit: cover;
+    height: 100vh;
+    width: 100vw;
 }
